# GDB

./: LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
demo/: demo.dpo
src/: App.tsx  ColumnConfigurator.tsx  ColumnCreator.tsx  DataTable.tsx  DeleteSheetDialog.tsx  Footer.tsx  Header.tsx  JSONPreview.tsx  NewFileDialog.tsx  Overlays.tsx  Sheet.tsx  SheetCreator.tsx  SheetDisplay.tsx  Table.tsx  index.ts  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/stores/: data.tsx
